@@ -2,6 +2,9 @@ Post-v3.3.0
 --------------------
    - Option '--mlockall' now only locks memory pages on fault, if possible.
      This also makes it compatible with vHost Post-copy Live Migration.
+   - ovs-appctl:
+     * Added new option [-f|--format] to choose the output format, e.g. 'json'
+       or 'text' (by default).
    - Userspace datapath:
      * Conntrack now supports 'random' flag for selecting ports in a range
        while natting and 'persistent' flag for selection of the IP address
